<resources>

    <string name="app_name">Zmote</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash">Zmote</string>

    <color name="black">#000000</color>

    <string name="title_activity_select_stb">SelectSTBActivity</string>
    <string name="title_activity_main_activity_view">MainActivityView</string>
    <string name="title_activity_edit_stb">EditSTBActivity</string>
    <string name="title_activity_remote_control">RemoteControlActivity</string>
    <string name="search_stb_text">Search STB</string>
    <string name="activity_edit_stb_staticName">Name:</string>
    <string name="activity_edit_stb_hintName"></string>
    <string name="activity_edit_stb_editName"></string>
    <string name="activity_edit_stb_staticMAC">MAC:</string>
    <string name="activity_edit_stb_dynamicMAC">Unknown</string>
    <string name="activity_edit_stb_staticIP">IP:</string>
    <string name="activity_edit_stb_dynamicIP">Unknown</string>
    <string name="activity_edit_stb_staticType">Type: </string>
    <string name="activity_edit_stb_dynamicType">Unknown</string>
    <string name="activity_edit_stb_saveButton">Save</string>
    <string name="activity_edit_stb_cancelButton">Cancel</string>
    <string name="activity_edit_stb_title">Edit STB</string>
    <string name="button_menu_epg_description">EPG button</string>
    <string name="button_menu_remote_description">Remote View button</string>
    <string name="button_manu_fav_description">Favourite channels button</string>
    <string name="button_menu_webtv_description">WebTV button</string>
    <string name="select_stb_STB_Name">STB Name</string>
    <string name="activity_main_select_TSB_text">SelectSTBActivity</string>
    <string name="activity_remote_control_OK_button">OK</string>
    <string name="title_activity_buttons_bar">ButtonsBarActivity</string>
    <string name="title_activity_main_activity_view2">MainView2</string>
    <string name="title_activity_main_test">MainTestActivity</string>
    <string name="title_activity_epg">EPGActivity</string>
    <string name="green_button_description">green_button_description</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="add_stb_dot">.</string>
    <string name="add_stb_text">Add STB</string>
    <string name="top_lists">Top lists</string>
    <string name="search">Search</string>
    <string name="title_activity_facebook_test">FacebookTestActivity</string>
    <string name="app_id">200907146711833</string>
    <string name="fb_share">fbShare</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="app_name">Scrumptious</string>
    <string name="app_name">Facebook SDK Example</string>
    <string name="request">Request!</string>
    <string name="hello">Hello World!</string>
    <string name="upload">Upload Photo</string>
    <string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="app_name">ProfilePictureSample</string>
    <string name="description">Sample app demonstrating the use of ProfilePictureView</string>
    <string name="cropping_label">Show cropped version</string>
    <string name="crop_original_button_text">Original</string>
    <string name="crop_square_button_text">Square</string>
    <string name="user_chris_name">Chris</string>
    <string name="user_michael_name">Michael</string>
    <string name="user_karthik_name">Karthik</string>
    <string name="user_random_name">Random</string>
    <string name="user_none_name">None</string>
    <string name="smaller_button_text">-</string>
    <string name="larger_button_text">+</string>
    <string name="large_image_size">Large</string>
    <string name="normal_image_size">Normal</string>
    <string name="small_image_size">Small</string>
    <string name="preset_size_button_text">Use preset size</string>
    <string name="custom_size_button_text">Use custom size</string>
    <string name="share">Share</string>

</resources>