<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/activity_edit_stb_titleid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/activity_edit_stb_title"
        tools:context=".EditSTBActivity" />

    <TextView
        android:id="@+id/activity_edit_stb_textNameid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_edit_stb_editNameid"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_edit_stb_staticName"
        tools:context=".EditSTBActivity" />

    <EditText
        android:id="@+id/activity_edit_stb_editNameid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_edit_stb_titleid"
        android:layout_toRightOf="@+id/activity_edit_stb_textNameid"
        android:hint="@string/activity_edit_stb_hintName"
        android:singleLine="true"
        android:text="@string/activity_edit_stb_editName"
        tools:context=".EditSTBActivity" />

    <TextView
        android:id="@+id/activity_edit_stb_staticMACid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_edit_stb_editNameid"
        android:text="@string/activity_edit_stb_staticMAC"
        tools:context=".EditSTBActivity" />

    <TextView
        android:id="@+id/activity_edit_stb_dynamicMACid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_edit_stb_staticMACid"
        android:layout_toRightOf="@+id/activity_edit_stb_staticMACid"
        android:text="@string/activity_edit_stb_dynamicMAC"
        tools:context=".EditSTBActivity" />

    <TextView
        android:id="@+id/activity_edit_stb_staticIPid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_edit_stb_staticMACid"
        android:text="@string/activity_edit_stb_staticIP"
        tools:context=".EditSTBActivity" />

    <TextView
        android:id="@+id/activity_edit_stb_dynamicIPid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_edit_stb_staticIPid"
        android:layout_toRightOf="@+id/activity_edit_stb_staticIPid"
        android:text="@string/activity_edit_stb_dynamicIP"
        tools:context=".EditSTBActivity" />

    <TextView
        android:id="@+id/activity_edit_stb_staticTypeid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_edit_stb_staticIPid"
        android:text="@string/activity_edit_stb_staticType"
        tools:context=".EditSTBActivity" />

    <TextView
        android:id="@+id/activity_edit_stb_dynamicTypeid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_edit_stb_staticTypeid"
        android:layout_toRightOf="@+id/activity_edit_stb_staticTypeid"
        android:text="@string/activity_edit_stb_dynamicType"
        tools:context=".EditSTBActivity" />

    <Button
        android:id="@+id/activity_edit_stb_save_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_edit_stb_staticTypeid"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_edit_stb_saveButton" />

    <Button
        android:id="@+id/activity_edit_stb_cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_edit_stb_save_button"
        android:layout_centerHorizontal="true"
        android:text="@string/activity_edit_stb_cancelButton" />

</RelativeLayout>